<resources>
    <string name="app_name">Praticas</string>
    <string name="input_nome">Nome</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Senha</string>
    <string name="button_cadastro">Cadastrar</string>
    <string name="button_login">Login</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="button_sair">SIGN OUT</string>
    <string name="send_message">Send Message</string>
    <string name="edit_message">Message</string>
</resources>