<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:layout_marginVertical="10dp"
        ></TextView>

    <LinearLayout
        android:id="@+id/chat_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        ></LinearLayout>

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:inputType="textShortMessage"
        android:layout_marginVertical="10dp"
        />

    <Button
        android:id="@+id/send_message"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"></Button>

    <Button
        android:id="@+id/button_sair"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sair"></Button>
</LinearLayout>